--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,17 +1,49 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ADD8E6"
+        android:background="#a7cdf2"
         android:orientation="horizontal">
 
+      <!--  <com.example.santhosh.travellocator.DelayAutoCompleteAddress
+            android:id="@+id/geo_autocomplete"
+            android:layout_width="286dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+
+            android:layout_marginBottom="4dp"
+
+            android:layout_marginEnd="35dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginTop="4dp"
+            android:background="@color/white"
+            android:dropDownWidth="fill_parent"
+            android:inputType="textCapSentences"
+            android:padding="10dp" />
+
+        <ImageView
+            android:id="@+id/geo_autocomplete_clear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_x"
+
+            android:visibility="gone"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            />-->
         <EditText
+            android:id="@+id/address_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -22,6 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="onClick"
             android:text="Search" />
     </LinearLayout>
 
@@ -31,6 +64,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.example.santhosh.travellocator.views.MapsActivity" />
+    </LinearLayout>
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:layout_marginBottom="20dp"
+        android:layout_margin="@dimen/fab_margin"
+        android:backgroundTint="#12660A"
+        android:onClick="onClick"
+        android:src="@drawable/ic_line_weight_black_24dp" />
+
+
+
+</android.support.design.widget.CoordinatorLayout>
 
